[gd_scene load_steps=12 format=3 uid="uid://b72ogvv8817i8"]

[ext_resource type="PackedScene" uid="uid://b1d14cno5qcy7" path="res://background.tscn" id="1_i837w"]
[ext_resource type="Script" path="res://scenes/Level1.gd" id="1_kgqjh"]
[ext_resource type="Texture2D" uid="uid://dlw04gqykmxb4" path="res://assets/Clouds/Clouds 2/1.png" id="2_xtwkn"]
[ext_resource type="TileSet" uid="uid://blj0g7hfhntgr" path="res://scenes/Tilemap.tres" id="3_628y2"]
[ext_resource type="PackedScene" uid="uid://5ntvaej8g1ix" path="res://objects/button.tscn" id="5_okro4"]
[ext_resource type="PackedScene" uid="uid://brgi1iv7an7nc" path="res://scenes/hud.tscn" id="8_tx8xr"]
[ext_resource type="PackedScene" uid="uid://bwmdo33jnr2y3" path="res://objects/gem.tscn" id="9_xyjo5"]
[ext_resource type="PackedScene" uid="uid://5v5v0y6w2p3v" path="res://objects/pinkGem.tscn" id="10_ct2ri"]
[ext_resource type="PackedScene" uid="uid://e82t6kbpilyg" path="res://objects/metalPlatform.tscn" id="11_5fyjt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aedbi"]
size = Vector2(103, 116)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6s0py"]
properties/0/path = NodePath(".:blue_collected")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:pink_collected")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Level2" type="Node2D" groups=["level"]]
z_index = -1
script = ExtResource("1_kgqjh")

[node name="TextureRect" parent="." instance=ExtResource("1_i837w")]
anchors_preset = -1
anchor_left = 0.001
anchor_right = 1.0
anchor_bottom = 1.019
offset_left = 8.0
offset_top = 8.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xtwkn")

[node name="ButtonMapping" type="Label" parent="."]
offset_left = 48.0
offset_top = 320.0
offset_right = 261.0
offset_bottom = 400.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Teamwork makes 
the dream work"
horizontal_alignment = 1

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = ExtResource("3_628y2")
rendering_quadrant_size = 48
format = 2
layer_0/name = "Main"
layer_0/tile_data = PackedInt32Array(1376256, 393216, 5, 1376257, 458752, 5, 1376258, 458752, 5, 1376259, 458752, 5, 1376260, 458752, 5, 1376261, 458752, 5, 1376262, 458752, 5, 1376263, 458752, 5, 1376264, 458752, 5, 1376265, 458752, 5, 1376266, 458752, 5, 1376267, 458752, 5, 1376268, 458752, 5, 1376269, 458752, 5, 1376270, 458752, 5, 1376271, 458752, 5, 1376272, 458752, 5, 1310737, 458752, 5, 1310738, 458752, 5, 1310739, 458752, 5, 1310740, 458752, 5, 1310741, 458752, 5, 1310742, 458752, 5, 1310743, 458752, 5, 1310744, 458752, 5, 1310745, 458752, 5, 1310746, 458752, 5, 1310747, 458752, 5, 1310748, 458752, 5, 1310749, 458752, 5, 1310750, 458752, 5, 1310751, 458752, 5, 1310752, 458752, 5, 1310753, 458752, 5, 1310754, 458752, 5, 1310755, 458752, 5, 1310756, 458752, 5, 1310757, 458752, 5, 1310758, 458752, 5, 1310759, 524288, 5, 1376295, 524288, 5, 1376294, 458752, 5, 1376293, 458752, 5, 1376292, 458752, 5, 1376291, 458752, 5, 1376290, 458752, 5, 1376289, 458752, 5, 1376288, 458752, 5, 1376287, 458752, 5, 1376286, 458752, 5, 1376285, 458752, 5, 1376284, 458752, 5, 1376283, 458752, 5, 1376282, 458752, 5, 1376281, 458752, 5, 1376280, 458752, 5, 1376279, 458752, 5, 1376278, 458752, 5, 1376277, 458752, 5, 1376276, 458752, 5, 1376275, 458752, 5, 1376274, 458752, 5, 1376273, 458752, 5, 1310736, 458752, 5, 1310735, 458752, 5, 1310734, 458752, 5, 1310733, 458752, 5, 1310732, 458752, 5, 1310731, 458752, 5, 1310730, 458752, 5, 1310729, 458752, 5, 1310728, 458752, 5, 1310727, 458752, 5, 1310726, 458752, 5, 1310725, 458752, 5, 1310724, 458752, 5, 1310723, 458752, 5, 1310722, 458752, 5, 1310721, 458752, 5, 1310720, 393216, 5, 1245184, 393216, 4, 1245185, 458752, 4, 1245186, 458752, 4, 1245187, 458752, 4, 1245188, 458752, 4, 1245189, 458752, 4, 1245190, 458752, 4, 1245191, 458752, 4, 1245192, 458752, 4, 1245193, 458752, 4, 1245194, 458752, 4, 1245195, 458752, 4, 1245196, 458752, 4, 1245197, 655360, 5, 1245198, 458752, 5, 1245199, 458752, 5, 1245200, 589824, 5, 1245201, 458752, 4, 1245202, 458752, 4, 1245203, 458752, 4, 1245204, 458752, 4, 1245205, 458752, 4, 1245206, 458752, 4, 1245207, 458752, 4, 1245208, 458752, 4, 1245209, 458752, 4, 1245210, 458752, 4, 1245211, 458752, 4, 1245212, 458752, 4, 1245213, 458752, 4, 1245214, 458752, 4, 1245215, 458752, 4, 1245216, 458752, 4, 1245217, 458752, 4, 1245218, 458752, 4, 1245219, 458752, 4, 1245220, 458752, 4, 1245221, 458752, 4, 1245222, 458752, 4, 1245223, 524288, 4, 1441830, 458752, 5, 1441831, 524288, 5, 1441829, 458752, 5, 1441828, 458752, 5, 1441827, 458752, 5, 1441826, 458752, 5, 1441825, 458752, 5, 1441824, 458752, 5, 1441823, 458752, 5, 1441822, 458752, 5, 1441821, 458752, 5, 1441820, 458752, 5, 1441819, 458752, 5, 1441818, 458752, 5, 1441817, 458752, 5, 1441816, 458752, 5, 1441815, 458752, 5, 1441814, 458752, 5, 1441801, 458752, 5, 1441800, 458752, 5, 1441799, 458752, 5, 1441798, 458752, 5, 1441797, 458752, 5, 1441796, 458752, 5, 1441795, 458752, 5, 1441794, 458752, 5, 1441792, 393216, 5, 1441793, 458752, 5, 1441802, 458752, 5, 1441803, 458752, 5, 1441804, 458752, 5, 1441805, 458752, 5, 1441806, 458752, 5, 1441807, 458752, 5, 1441808, 458752, 5, 1441809, 458752, 5, 1441810, 458752, 5, 1441811, 458752, 5, 1441812, 458752, 5, 1441813, 458752, 5, 393253, 0, 4, 458789, 0, 5, 393254, 65536, 4, 458790, 65536, 5, 458791, 65536, 5, 524325, 0, 5, 393255, 65536, 4, 524326, 65536, 5, 524327, 65536, 5, 1179661, 458752, 5, 1114125, 458752, 5, 1048589, 458752, 5, 983053, 655360, 5, 1179662, 458752, 5, 1114126, 458752, 5, 1048590, 458752, 5, 983054, 458752, 5, 983055, 458752, 5, 983056, 524288, 5, 1048592, 524288, 5, 1114128, 524288, 5, 1179664, 524288, 5, 1179663, 458752, 5, 1114127, 458752, 5, 1048591, 458752, 5, 917520, 524288, 4, 917517, 393216, 4, 917518, 458752, 4, 917519, 458752, 4, 1048587, 393216, 5, 1114123, 393216, 5, 1179659, 393216, 5, 1048588, 458752, 5, 1114124, 458752, 5, 1179660, 458752, 5, 983051, 393216, 4, 983052, 458752, 4)
layer_1/name = "Platforms"
layer_1/tile_data = PackedInt32Array(589860, 458754, 4, 589861, 458754, 4, 589863, 458754, 4, 589862, 458754, 4, 786432, 393216, 4, 851968, 393216, 5, 917504, 393216, 6, 786433, 458752, 4, 851969, 458752, 5, 917505, 458752, 6, 786434, 524288, 4, 851970, 589824, 5, 917506, 458752, 6, 851971, 524288, 4, 917507, 524288, 6, 720902, 1114112, 1, 720903, 1245184, 1, 589854, 393218, 4, 589855, 458754, 4, 589856, 458754, 4, 589857, 458754, 4, 589858, 458754, 4, 589859, 458754, 4, 720926, 393216, 6, 720927, 458752, 6, 655390, 393216, 5, 655391, 458752, 5, 655392, 458752, 5, 655393, 458752, 5, 655394, 458752, 5, 655395, 458752, 5, 655396, 458752, 5, 655397, 458752, 5, 655398, 458752, 5, 655399, 458752, 5, 720928, 458752, 6, 720929, 458752, 6, 720930, 458752, 6, 720931, 458752, 6, 720932, 458752, 6, 720933, 458752, 6, 720934, 458752, 6, 720935, 458752, 6)
layer_2/name = "Platforms (Extra)"
layer_2/tile_data = PackedInt32Array(1441792, 65540, 1342177282, 1376256, 65540, 1342177282, 1310720, 65540, 1342177282, 1245184, 65540, 1342177282, 1179648, 65540, 1342177282, 1114112, 65540, 1342177282, 1048576, 65540, 1342177282, 983040, 65540, 1342177282, 917504, 65540, 1342177282, 851968, 65540, 1342177282, 786432, 65540, 1342177282, 720896, 65540, 1342177282, 655360, 65540, 1342177282, 589824, 65540, 1342177282, 524288, 65540, 1342177282, 458752, 65540, 1342177282, 393216, 65540, 1342177282, 327680, 65540, 1342177282, 262144, 65540, 1342177282, 196608, 65540, 1342177282, 131072, 65540, 1342177282, 65536, 65540, 1342177282, 0, 65540, 1342177282, 1441831, 65540, 1610612738, 1376295, 65540, 1610612738, 1310759, 65540, 1610612738, 1245223, 65540, 1610612738, 1179687, 65540, 1610612738, 1114151, 65540, 1610612738, 1048615, 65540, 1610612738, 983079, 65540, 1610612738, 917543, 65540, 1610612738, 852007, 65540, 1610612738, 786471, 65540, 1610612738, 720935, 65540, 1610612738, 655399, 65540, 1610612738, 589863, 65540, 1610612738, 524327, 65540, 1610612738, 458791, 65540, 1610612738, 393255, 65540, 1610612738, 327719, 65540, 1610612738, 262183, 65540, 1610612738, 196647, 65540, 1610612738, 131111, 65540, 1610612738, 65575, 65540, 1610612738, 39, 65540, 1610612738, 1, 65540, 805306370, 2, 65540, 805306370, 3, 65540, 805306370, 4, 65540, 805306370, 5, 65540, 805306370, 6, 65540, 805306370, 7, 65540, 805306370, 8, 65540, 805306370, 9, 65540, 805306370, 10, 65540, 805306370, 11, 65540, 805306370, 38, 65540, 805306370, 37, 65540, 805306370, 36, 65540, 805306370, 35, 65540, 805306370, 34, 65540, 805306370, 33, 65540, 805306370, 32, 65540, 805306370, 31, 65540, 805306370, 30, 65540, 805306370, 29, 65540, 805306370, 28, 65540, 805306370, 27, 65540, 805306370, 26, 65540, 805306370, 25, 65540, 805306370, 24, 65540, 805306370, 23, 65540, 805306370, 22, 65540, 805306370, 21, 65540, 805306370, 20, 65540, 805306370, 19, 65540, 805306370, 18, 65540, 805306370, 17, 65540, 805306370, 12, 65540, 805306370, 13, 65540, 805306370, 14, 65540, 805306370, 15, 65540, 805306370, 16, 65540, 805306370)
layer_3/name = "Walls"
layer_3/tile_data = PackedInt32Array(39, 4, 805306370, 0, 131076, 805306370)
layer_4/name = "Walls(Extra)"
layer_4/tile_data = PackedInt32Array()

[node name="Button" parent="." node_paths=PackedStringArray("platform") instance=ExtResource("5_okro4")]
position = Vector2(496, 888)
platform = NodePath("../greenPlatform")
set_color = "green"

[node name="Button2" parent="." node_paths=PackedStringArray("platform") instance=ExtResource("5_okro4")]
position = Vector2(1728, 408)
platform = NodePath("../redPlatform")
set_color = "red"

[node name="Button4" parent="." node_paths=PackedStringArray("platform") instance=ExtResource("5_okro4")]
position = Vector2(776, 648)
platform = NodePath("../redPlatform")
set_color = "red"

[node name="Button3" parent="." node_paths=PackedStringArray("platform") instance=ExtResource("5_okro4")]
position = Vector2(40, 552)
platform = NodePath("../greenPlatform")
set_color = "green"

[node name="HUD" parent="." instance=ExtResource("8_tx8xr")]

[node name="BlueGem" parent="." instance=ExtResource("9_xyjo5")]
position = Vector2(168, 592)

[node name="PinkGem" parent="." instance=ExtResource("10_ct2ri")]
position = Vector2(104, 544)
color = 2

[node name="greenPlatform" parent="." instance=ExtResource("11_5fyjt")]
position = Vector2(232, 832)
distance = 200
set_color = "green"

[node name="redPlatform" parent="." instance=ExtResource("11_5fyjt")]
position = Vector2(1376, 800)
distance = 350
set_color = "red"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1856, 376)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_aedbi")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6s0py")

[node name="SpawnBlue" type="Marker2D" parent="." groups=["spawn_blue"]]
position = Vector2(66, 866)

[node name="SpawnPink" type="Marker2D" parent="." groups=["spawn_pink"]]
position = Vector2(194, 866)

[connection signal="collected" from="BlueGem" to="." method="_on_blue_gem_collected"]
[connection signal="collected" from="PinkGem" to="." method="_on_pink_gem_collected"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
